apps/app-proxy/overlays/codefresh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-cap-app-proxy
  namespace: codefresh
spec:
  ingressClassName: nginx
  rules:
  - host: codefresh.52.66.216.16.nip.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
